docroot/profiles/drupal_commons/themes/commons_environs/css/styles.css
/* ... */
.view-user-meta .views-field-nothing-1 {
  float: left;
  clear: none;
  color: #736357;
  text-transform: uppercase;
  font-weight: bold;
  font-size: 10px;
  margin-top: 7px;
}

.header-site-info {
  float: none;
  position: relative;
  overflow: visible;
  border-top: 1px solid #fbb343;
  margin: 0 10px;
  padding-top: 5px;
}

.border-orange-left {
  position: absolute;
  left: 0px;
  top: -1px;
}

.border-orange-right {
  position: absolute;
  right: 0px;
  top: -1px;
}

.nav-group {
  width: auto;
  background-color: transparent;
  border-radius: 0;
  -webkit-border-radius: 0;
  -moz-border-radius: 0;
  margin-bottom: 10px;
}

#primary-menu {
  float: none;
  margin: 0px 0 0px;
}

.primary-menu-inner ul.sf-menu a {
  font-family: Arial, "Lucida Grande", Verdana, sans-serif;
  font-size: 14px;
  color: #736357;
  text-transform: uppercase;
  height: 28px;
  line-height: 28px;
  font-weight: bold;
}

.sf-menu li:hover ul, .sf-menu li.sfHover ul {
  left:           0;
  top:            100%;
  z-index:        99;
}

.sf-menu .expanded:hover {
  background: #736357;
}

.sf-menu .expanded:hover > a {
  color: #F0EDEA;
}

.sf-menu .expanded:hover .menu,
.sf-menu .expanded .menu:hover {
  background: #F0EDEA;
  -moz-box-shadow: 0px 0px 9px #cbc6c1;
  -webkit-box-shadow: 0px 0px 9px #cbc6c1;
  box-shadow: 0px 0px 9px #cbc6c1;
}

.sf-menu .expanded .menu li:hover {
  background: #E0DDDA;
}

.sf-menu ul {
    position: absolute;
    top: 3em;
    left: -9999em;
    width: auto;
	max-width: 180px;
    white-space: nowrap;
	z-index: 9999;
}
/*removes z-index on dashboard minimize/move/maximize icons*/
.portlet-icon {
	z-index: 0;
}

.front #content-top-inner {
  background: #F7931E;
  border: none;
  -moz-border-radius: 16px;
  -webkit-border-radius: 16px;
  border-radius: 16px;
  -moz-box-shadow: 0px 0px 9px #cbc6c1;
  -webkit-box-shadow: 0px 0px 9px #cbc6c1;
  box-shadow: 0px 0px 9px #cbc6c1;
  margin: 9px;
  padding: 6px;
  color: #fff;
}

.front #block-boxes-homepage_info_box {
  border: 1px solid #fff;
  -moz-border-radius: 12px;
  -webkit-border-radius: 12px;
  border-radius: 12px;
  margin-bottom: 0;
  padding: 34px 40px 24px 46px;
  width: auto;
  position: relative;
}

.front #block-boxes-homepage_info_box h2 {
  font-family: Arial, "Lucida Grande", Verdana, sans-serif;
  font-size: 36px;
  line-height: 36px;
  color: #fff;
  font-weight: bold;
  text-transform: uppercase;
  margin: 0;
}

.front #block-boxes-homepage_info_box h3 {
  color: #fff;
  margin: 20px 0 0 0;
}

.front #block-boxes-homepage_info_box p {
  margin: 0;
}

.front #block-boxes-homepage_info_box .intro-textblock {
  float: left;
  width: 30%;
  margin-right: 15px;
}

.front #block-boxes-homepage_info_box .intro-morebutton {
  text-align: left;
  padding: 15px 0 0 0;
  font-weight: bold;
  color: #fff;
  display: inline-block;
}

.not-logged-in.front #block-boxes-homepage_info_box .intro-morebutton {
  bottom: -23px;
}

.not-logged-in.front #block-boxes-homepage_info_box {
  padding: 34px 40px 34px 46px;
}

.not-logged-in.front #block-commons_core-header_login {
  margin-top: 16px;
}

.breadcrumbs {
  background-color: transparent;
  float: none;
  margin-bottom: 1em;
}

.view-homepage-group-showcase .views-row {
  border: none;
}

.front .panel-pane {
  margin: 9px 9px 20px 9px;
}

.front .panel-pane .inner, .front panel-panel .block .inner {
  border: none;
  -moz-border-radius: 16px;
  -webkit-border-radius: 16px;
  border-radius: 16px;
  -moz-box-shadow: 0px 0px 9px #cbc6c1;
  -webkit-box-shadow: 0px 0px 9px #cbc6c1;
  box-shadow: 0px 0px 9px #cbc6c1;
  margin: 9px;
  padding: 12px 16px;
  background: #fff url(../images/bg-box-orange.png) 0px 0px no-repeat;
}

.front .panel-pane.pane-homepage-group-showcase .inner {
  background-image: none;
  padding: 15px;
}

#content-tabs {
  margin: 15px 0 0 0;
  position: relative;
  top: 2px;
}

#content-tabs ul.primary, #content-tabs ul.secondary {
  border-bottom: none;
  margin-bottom: 0;
}

#content-tabs ul.primary {
	margin-left: 7px;
}

#content-tabs ul.primary li a:link, #content-tabs ul.primary li a:visited {
  -moz-border-radius-topleft: 7px;
  -moz-border-radius-topright: 7px;
  -webkit-border-top-left-radius: 7px;
  -webkit-border-top-right-radius: 7px;
  background: #FBB03B url(../images/bg-tab-orange.png) 0px 0px no-repeat;
  border-top-left-radius: 7px;
  border-top-right-radius: 7px;
  border: 2px solid #FBB03B;
  color: #fff;
  cursor: pointer;
  float: left;
  margin: 4px 4px -3px 0;
  padding: 8px 14px;
  text-decoration: none;
  white-space: nowrap;
  font-size: 14px;
  font-weight: bold;
  text-transform: uppercase;
}

#content-tabs ul.primary li a.active:link, #content-tabs ul.primary li a.active:visited {
  background-color: #fff;
  background-image: none;
  border-bottom: 1px solid #fff;
  color: #fbb03b;
}

#homebox { padding-bottom:40px; }

#homebox .homebox-placeholder {
  clear: both;
}

.content-content {
  background: #fff;
  padding: 10px;
  -moz-border-radius: 16px;
  -webkit-border-radius: 16px;
  border-radius: 16px;
  border: 2px solid #fbb03b;
  overflow: hidden;
}

.page-dashboard .content-content {
  background: none;
  padding: 10px;
  -moz-border-radius: 0;
  -webkit-border-radius: 0;
  border-radius: 0;
  border: none;
}

#content-content.top-left-straight {
  -moz-border-radius: 0 9px 9px 9px;
  -webkit-border-radius: 0 9px 9px 9px;
  border-radius: 0 9px 9px 9px;
  overflow: hidden;
}

.front .content-content {
  background: #fff;
  border: none;
  -moz-border-radius: 16px;
  -webkit-border-radius: 16px;
  border-radius: 16px;
  -moz-box-shadow: 0px 0px 9px #cbc6c1;
  -webkit-box-shadow: 0px 0px 9px #cbc6c1;
  box-shadow: 0px 0px 9px #cbc6c1;
  margin: 9px;
  padding: 12px 16px;
  background: #fff url(../images/bg-box-orange.png) 0px 0px no-repeat;
  overflow: hidden;
}
/* ... */

